--- a/_tickets.html
+++ b/_tickets.html
@@ -1,33 +1,44 @@
-
-
 <div id="tickets">
     <div class="row">
         <div class="col-xs-12">
-        <h1 class="text-center">Avaliable Tickets</h1>
+            <h1 class="text-center">Avaliable Tickets</h1>
             <div class="container">
                 <div class="text-center">
-                <div class="row">
-                <ul id="buttons" class="col-xs-12">
-                    <li class="col-xs-3">
-                        <div data-name="ralphs" class="store">Ralph's</div>
-                    </li>
-                    <li class="col-xs-3">
-                        <div data-name ="tjs" class="store">TJ's</div>
-                    </li>
-                    <li class="col-xs-3">
-                        <div data-name ="wholeFoods" class="store">WholeFoods</div>
-                    </li>
-                    <li class="col-xs-3">
-                        <div data-name ="vons" class="store">Vons</div>
-                    </li>
-                </ul>
-                </div>
+                    <div class="row">
+                        <ul id="buttons" class="col-xs-12">
+                            <li class="col-xs-3">
+                                <div data-name="ralphs" class="store">Ralph's</div>
+                            </li>
+                            <li class="col-xs-3">
+                                <div data-name="tjs" class="store">TJ's</div>
+                            </li>
+                            <li class="col-xs-3">
+                                <div data-name="wholeFoods" class="store">WholeFoods</div>
+                            </li>
+                            <li class="col-xs-3">
+                                <div data-name="vons" class="store">Vons</div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-    <div class="col-xs-12">
-    <ul id="tickets_content" class = "text-center"></ul>
+            <div class="row">
+                <div class="col-xs-12">
+                    <div class="container" id="box">
+                        <ul id="tickets_content" class=text-center"></ul>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="todo-footer">
+                    <div id="footerInfo">
+                    </div>
+                </div>
+            </div>
+            <div id="footerBars">
+                <div class="footer2"></div>
+                <div class="footer3"></div>
             </div>
         </div>
     </div>
-</div>
-<script type="text/javascript", src="/js/_tickets.js"></script>
+    <script type="text/javascript" src="/js/_tickets.js"></script>
