updated to send to server

--- a/_signUp.html
+++ b/_signUp.html
@@ -13,4 +13,4 @@
         </div>
     </div>
 </div>
-<script src="js/_signUp.js"></script>
+<script type="text/javascript" src="js/_signUp.js"></script>
