--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
 
 <script>
 
-    var currentPage = "_homePage";
     function setFlowVisible(which) {
 
         $("#page-content").children().each(function () {
@@ -104,7 +103,7 @@
     }
 
     function next() {
-        var item = $('#' + currentPage);
+        var item = $('#' + loader.currentPage);
         var parent = $(item).data('parent');
         var pos = $(item).data('pos');
         if (pos < allPages[parent].length - 1) {
@@ -113,7 +112,7 @@
     }
 
     function previous() {
-        var item = $('#' + currentPage);
+        var item = $('#' + loader.currentPage);
         var parent = $(item).data('parent');
         var pos = $(item).data('pos');
         if (pos > 0) {
@@ -121,16 +120,19 @@
         }
     }
 
-    function goToPreviousPage(){
+    function goToPreviousPage() {
         goToPage(loader.previousPage);
     }
 
 
     function goToPage(id) {
+        loader.sendData();
+        loader.previousPage = loader.currentPage;
         var item = $('#' + id);
         var parent = $(item).data('parent');
 //        setFlowVisible(parent);
-        currentPage = id;
+        loader.setCurrentPage(id);
+        loader.loadData();
         $("#page-content").css('transform',
                 'translate(-' + $(item).data("pos") * 100 + '%, -' + $(item).data("vpos") * 100 + '%)')
     }
@@ -154,32 +156,90 @@
     }
 
 
-
     var allSections = ['abovePages', 'createTicket', /*'acceptTicket',*/ 'confirmTicket', 'driverFlow'];
     var allPages = {
         abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" /*,"_passwordReset" ",_signUp", "_login"*/],
         createTicket: ["_homePage", "_shopping", "_checkout", "_login"/*, "_submitted"*/],
         /*acceptTicket: ['_acceptTicket', '_paid'],*/
-        confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset","_signUp"],
+        confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset", "_signUp"],
         driverFlow: ['_tickets', '_driverList', /*'_confirmCompletion', '_completeTicket', '_rating',*/ '_congrats']
     };
     loadPage("_driverTickets", '#driverTickets');
     loadPage("_userTickets", '#userTickets');
 
 
+
     var loader = {
         userId: "",
-        previousPage: ""
+        previousPage: "",
+        currentPage: "",
+        currentPageObject: null,
+        setCurrentPage: function (page) {
+            loader.currentPage = page;
+            if (loader.hasOwnProperty(page)) {
+                loader.currentPageObject = loader[page];
+            }
+            else {
+                loader.currentPageObject = null;
+            }
+        },
+        //Saves current active ticket (if any), then fetches new one and loads page data corresponding to ticket status in back end store
+        getTicket: function (ticketId, callback) {
+            $.post("/getTicket", {
+                data: {
+                    id : ticketId
+                }
+            }, function(){
+                callback();
+            });
+        },
+        sendData: function () { //Gets data from page and sends to server for update. Server will send back version num
+            if (loader.currentPageObject != null) {
+                loader.currentPageObject.data = loader.currentPageObject.getData();
+                $.post("/sendData", {
+                    data: {
+                        page: loader.currentPage,
+                        data: loader.currentPageObject.data
+                    }
+                }, function (res) {
+                    if (loader.currentPageObject.version < res) {
+                        loader.currentPageObject.version = res;
+                    }
+                });
+            }
+        },
+        loadData: function () { //Gets data from server to load page with
+            if (loader.currentPageObject != null) {
+                $.post("/" + loader.currentPage, {data: loader.currentPageObject.version}, function (res) {
+                    if (data != null) {
+                        loader.currentPageObject.data = res.data;
+                        loader.currentPageObject.version = res.version;
+                        loader.currentPageObject.loadData();
+                    }
+                });
+
+            }
+        }
+
 
     };
+    /*
+     Each page that needs like sync (edit ticket pages and stateless pages) has:
+     data:
+     version:
+     getData: packages page data.
+     loadData: loads data package
+     Otherwise it is a missing property; the other pages load data through their own ajax(?)
+     */
+
 
     $(document).ready(function () {
         $.ajax({
             type: "POST",
             url: "/init",
             data: {},
-            success: function(data){
-                if (data == null){
+            success: function (data) {
+                if (data == null) {
 
                 }
                 else {
@@ -200,21 +260,6 @@
             }
         }
     });
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
     jQuery(document).ready(function ($) {
