--- a/index.html
+++ b/index.html
@@ -156,12 +156,18 @@
 
 
     var allSections = ['abovePages', 'createTicket', /*'acceptTicket',*/ 'confirmTicket', 'driverFlow'];
-    var glyphiconClasses = {
-        abovePages: ["glyphicon glyphicon-cog", "", "", "glyphicon glyphicon-wrench", "glyphicon glyphicon-repeat", "glyphicon glyphicon-plus-sign", "glyphicon glyphicon-log-in"],
-        createTicket: ["", "", "glyphicon glyphicon-check", ""],
-        acceptTicket: ['', ''],
-        confirmTicket: ['_confirmTicket', "glyphicon glyphicon-signal", '_ticketClosed'],
-        driverFlow: ['glyphicon glyphicon-list-alt', '_driverList', '', '', 'glyphicon glyphicon-signal', '']};
+
+    var all=["_accSetting", "_contact", "_history", "_passwordRecovery","_homePage", "_shopping", "_checkout", "_login",
+        "_rating","_passwordReset","_signUp","_tickets", "_driverList", '_congrats'];
+
+    var allGlyphs = ["glyphicon glyphicon-cog","","","glyphicon glyphicon-wrench","glyphicon glyphicon-home",
+        "","glyphicon glyphicon-check","glyphicon glyphicon-log-in","glyphicon glyphicon-signal",
+        "glyphicon glyphicon-repeat",
+        "glyphicon glyphicon-plus-sign","","", ""];
+
+    var pageNames = ["Setting", "Contact", "History", "Password Recovery","Home", "Shopping", "Checkout", "Login",
+        "Rating","Password Reset","Sign Up","Tickets", "Driver List", 'Congrats'];
+
     var allPages = {
         abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" /*,"_passwordReset" ",_signUp", "_login"*/],
         createTicket: ["_homePage", "_shopping", "_checkout", "_login"/*, "_submitted"*/],
@@ -169,13 +175,7 @@
         confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset","_signUp"],
         driverFlow: ['_tickets', '_driverList', /*'_confirmCompletion', '_completeTicket', '_rating',*/ '_congrats']
     };
-    var title = {
-        abovePages: ["Account Setting", "Contact", "History", "Password Recovery", "Password Reset", "Sign Up", "Login"],
-        createTicket: ["Home Page", "Shopping", "Checkout", "Submitted"],
-        acceptTicket: ['Accept Ticket', 'Paid'],
-        confirmTicket: ['Confirm Ticket', "Rating", 'Ticket Closed'],
-        driverFlow: ['Tickets', 'DriverList', 'Confirm Completion', 'Complete Ticket', 'Rating', 'Congrats']
-    };
+
     loadPage("_driverTickets", '#driverTickets');
     loadPage("_userTickets", '#userTickets');
 
@@ -208,12 +208,15 @@
         for (var j = 0; j < allSections.length; j++) {
             var sectionName = allSections[j];
             var section = allPages[sectionName];
-            var glyphName =  glyphiconClasses[sectionName];
-            var pageNmae =  title[sectionName];
             for (i = 0; i < section.length; i++) {
                 whichid = section[i];
-                glyph = glyphName[i];
-                name = pageNmae[i];
+                for(var k=0; k<all.length; k++){
+                    if(whichid == all[k]){
+                        glyph = allGlyphs[k];
+                        name = pageNames[k];
+                        break;
+                    }
+                }
                 loadPage(whichid, '#' + sectionName, i, j);
                 $('#Butt').append("<div data-link='/#" + whichid + "'> <span class= '" +glyph+"'></span> "+name+"   </div>");
             }
