--- a/_accSetting.html
+++ b/_accSetting.html
@@ -32,7 +32,7 @@
                             <div class="col-xs-8 col-xs-offset-2">
                                 <div class="form-group">
                                     <label for="lname">Last Name:</label>
-                                    <input type="string" class="form-control" id="lname">
+                                    <input type="text" class="form-control" id="lname">
                                 </div>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
                             <div class="col-xs-8 col-xs-offset-2">
                                 <div class="form-group">
                                     <label for="state">State:</label>
-                                    <input type="string" class="form-control" id="state">
+                                    <input type="text" class="form-control" id="state">
                                 </div>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                                 <div class="row">
                                     <label for="month">Card Expiration Date:</label>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" style="margin-bottom: 13px; margin-top: .30;">
                                     <select class="form-control" id="month">
                                         <option>January</option>
                                         <option>February</option>
@@ -140,7 +140,7 @@
                                         <option>December</option>
                                     </select>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group" style="margin-bottom: 13px; margin-top: .30%;">
                                     <select class="form-control" id="year">
                                         <option>2015</option>
                                         <option>2016</option>
