--- a/_tickets.html
+++ b/_tickets.html
@@ -1,22 +1,22 @@
 <div id="tickets">
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="text-center">Avaliable Tickets</h1>
+            <h2 class="text-center">Avaliable Tickets</h2>
             <div class="container">
                 <div class="text-center">
                     <div class="row">
                         <ul id="buttons" class="col-xs-12">
                             <li class="col-xs-3">
-                                <div data-name="ralphs" class="store">Ralph's</div>
+                                <h4><div data-name="ralphs" class="store">Ralph's</div></h4>
                             </li>
                             <li class="col-xs-3">
-                                <div data-name="tjs" class="store">TJ's</div>
+                                <h4><div data-name="tjs" class="store">TJ's</div></h4>
                             </li>
                             <li class="col-xs-3">
-                                <div data-name="wholeFoods" class="store">WholeFoods</div>
+                                <h4><div data-name="wholeFoods" class="store">WholeFoods</div></h4>
                             </li>
                             <li class="col-xs-3">
-                                <div data-name="vons" class="store">Vons</div>
+                                <h4><div data-name="vons" class="store">Vons</div></h4>
                             </li>
                         </ul>
                     </div>
@@ -41,4 +41,5 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/js/_tickets.js"></script>
+</div>
+<script type="text/javascript" src="/js/_tickets.js"></script>
