--- a/_accSetting.html
+++ b/_accSetting.html
@@ -15,32 +15,16 @@
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
                                 <div class="form-group">
-                                    <label for="usr">Username:</label>
-                                    <input type="text" class="form-control" id="usr">
+                                    <label for="accsetting_full_name">Name:</label>
+                                    <input type="text" class="form-control" id="accsetting_full_name">
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
                                 <div class="form-group">
-                                    <label for="fname">First Name:</label>
-                                    <input type="text" class="form-control" id="fname">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="lname">Last Name:</label>
-                                    <input type="text" class="form-control" id="lname">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-xs-8 col-xs-offset-2">
-                                <div class="form-group">
-                                    <label for="email">Email:</label>
-                                    <input type="email" class="form-control" id="email"
+                                    <label for="accsetting_email">Email:</label>
+                                    <input type="email" class="form-control" id="accsetting_email"
                                            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$">
                                 </div>
                             </div>
@@ -48,8 +32,8 @@
                         <div class="row">
                             <div class="col-xs-8 col-xs-offset-2">
                                 <div class="form-group">
-                                    <label for="phone">Phone Number:</label>
-                                    <input type="text" class="form-control bfh-phone" data-country="US" id="phone">
+                                    <label for="accsetting_phone">Phone Number:</label>
+                                    <input type="text" class="form-control bfh-phone" data-country="US" id="accsetting_phone">
                                 </div>
                             </div>
                         </div>
