--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -1,13 +1,13 @@
 <div id="acceptedTickets">
     <div class="row">
         <div class="col-xs-12">
-                <h2 class="text-center">Accepted Tickets</h2>
+                <h2 class="text-center">Your Deliveries</h2>
             <div class="container">
                 <div class="text-center">
 
                     <div class="row">
                         <div class="col-xs-12">
-                            <h4>Pending Tickets</h4>
+                            <h3>Pending Tickets</h3>
                             <div class="container" id="box ">
                                 <ul id="pending_tickets" class=text-center"></ul>
                             </div>
@@ -22,7 +22,7 @@
 
                     <div class="row">
                         <div class="col-xs-12">
-                            <h4>Completed Tickets</h4>
+                            <h3>Completed Tickets</h3>
                             <div class="container" id="box">
                                 <ul id="completed_tickets" class=text-center"></ul>
                             </div>
