--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     var allSections = ['abovePages', 'createTicket', /*'acceptTicket',*/ 'confirmTicket', 'driverFlow'];
 
     var all=["_accSetting", "_contact", "_history", "_passwordRecovery","_homePage", "_shopping", "_checkout", "_login",
-        "_rating","_passwordReset","_signUp","_tickets", "_driverList2", '_congrats',"_acceptedTickets"];
+        "_rating","_passwordReset","_signUp","_tickets", "_driverList2", '_congrats',"_yourDeliveries"];
 
     var allGlyphs = ["glyphicon glyphicon-cog","","","glyphicon glyphicon-wrench","glyphicon glyphicon-home",
         "","glyphicon glyphicon-check","glyphicon glyphicon-log-in","glyphicon glyphicon-signal",
@@ -168,13 +168,13 @@
         "glyphicon glyphicon-plus-sign","","", ""];
 
     var pageNames = ["Setting", "Contact", "History", "Password Recovery","Home", "Shopping", "Checkout", "Login",
-        "Rating","Password Reset","Sign Up","Tickets", "Driver List", 'Congrats', "Accepted Tickets"];
+        "Rating","Password Reset","Sign Up","Tickets", "Driver List", 'Congrats', "Your Deliveries"];
 
     var allPages = {
         abovePages: ["_accSetting", "_contact", "_history", "_passwordRecovery" /*,"_passwordReset" ",_signUp", "_login"*/],
         createTicket: ["_homePage", "_shopping", "_checkout", "_login"/*, "_submitted"*/],
         /*acceptTicket: ['_acceptTicket', '_paid'],*/
-        confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset","_signUp", "_acceptedTickets"],
+        confirmTicket: [/*'_confirmTicket',*/ "_rating", /*'_ticketClosed',*/"_passwordReset","_signUp", "_yourDeliveries"],
         driverFlow: ['_tickets', '_driverList', /*'_confirmCompletion', '_completeTicket', '_rating',*/ '_congrats']
     };
 
