--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -1,4 +1,4 @@
-<div id="acceptedTickets">
+<div id="yourDeliveries">
     <div class="row">
         <div class="col-xs-12">
                 <h2 class="text-center">Your Deliveries</h2>
@@ -8,7 +8,7 @@
                     <div class="row">
                         <div class="col-xs-12">
                             <h3>Pending Tickets</h3>
-                            <div class="container" id="box ">
+                            <div class="container" id="box">
                                 <ul id="pending_tickets" class=text-center"></ul>
                             </div>
                         </div>
@@ -18,6 +18,10 @@
                             <div id="footer1">
                             </div>
                         </div>
+                    </div>
+                    <div id="footerBars">
+                        <div class="footer2"></div>
+                        <div class="footer3"></div>
                     </div>
 
                     <div class="row">
@@ -39,4 +43,4 @@
         </div>
     </div>
 </div>
-<script type="text/javascript" src="/js/_tickets.js"></script>
+<script type="text/javascript" src="/js/_yourDeliveries.js"></script>
