--- a/_yourDeliveries.html
+++ b/_yourDeliveries.html
@@ -34,9 +34,13 @@
                     </div>
                     <div class="row">
                         <div class="todo-footer">
-                            <div id="footer2">
+                            <div id="footer1">
                             </div>
                         </div>
+                    </div>
+                    <div id="footerBars">
+                        <div class="footer2"></div>
+                        <div class="footer3"></div>
                     </div>
                 </div>
             </div>
