Slight tweak to finalize

--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
         },
         currentPageChanged : function(){
             //Submit data
+            //Throttle.
         },
         sendData: function () { //Gets data from page and sends to server for update. Server will send back version num
             if (loader.currentPageObject.getData != null) {
