--- a/_shopping.html
+++ b/_shopping.html
@@ -13,7 +13,7 @@
                 <span><input id="shoppingCheckListItem" class="input" type="text" name="checkListItem"
                              placeholder="What do you need?" autocomplete="off"
                              autofocus/><button id="add-shopping-item" type="button"
-                                                class="btn btn-primary">Submit</button></span>
+                                                class="btn btn-primary">Add</button></span>
                 </form>
                 <ul id="list">
 
